# workshops-2022

./: README.md
01-git/: README.md  about-AhmadRafi.txt  about-Akshath.txt  about-Callum.txt  about-David.txt  about-Meghdeep.txt  about-Rachel.txt  about-aden.txt  about-albin.txt  about-arjun.txt  about-franz.txt  about-ishan.txt  about-kshitij.txt  about-max.txt  about-sashank.txt  about-sury.txt  about-tomL.txt  attendance.txt  attendance.txt 
02-basic-cpp/: CMakeLists.txt  README.md
02-basic-cpp/src/: 01_grades.cpp  01_grades.hpp  02_temperatures.cpp  02_temperatures.hpp  03_sums.cpp  03_sums.hpp  04_pancakes.cpp  04_pancakes.hpp  05_better_grades.cpp  05_better_grades.hpp  CMakeLists.txt
02-basic-cpp/test/: 01_grades.test.cpp  02_temperatures.test.cpp  03_sums.test.cpp  04_pancakes.test.cpp  05_better_grades.test.cpp  CMakeLists.txt  main.test.cpp
03-advanced-cpp/: CMakeLists.txt  README.md
03-advanced-cpp/src/: 01_roots.cpp  01_roots.hpp  02_sorting.cpp  02_sorting.hpp  03_linear_regression.cpp  03_linear_regression.hpp
03-advanced-cpp/test/: 01_roots.test.cpp  02_sorting.test.cpp  CMakeLists.txt
